# otus-ht

./: .gitignore  0.cpp  CMakeLists.txt  README.md  hello_world.cpp  move_me_out.cpp
ht/: CMakeLists.txt  class.cpp  file.cpp  filewriter.cpp  game.cpp  includes&&headers.h  includes.h  levels.cpp  rand.cpp
ht1/: README.md  move_me_out.h
ht2/: CmakeLists.txt  class.cpp  includes.h  main.cpp
ht4/: CMakeLists.txt  badlist.cpp  badvector.cpp
ht4/badlist/: badlist.h  badlist.ipp
ht4/badvector/: badvector.h  badvector.ipp
